--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babylonjs/core": "^8.38.0",
+    "@babylonjs/loaders": "^8.38.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
