--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@babylonjs/core": "^8.38.0",
     "@babylonjs/loaders": "^8.38.0",
+    "powerbi-client": "^2.23.9",
+    "powerbi-client-react": "^2.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
