--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "powerbi-client": "^2.23.9",
     "powerbi-client-react": "^2.0.0",
     "react": "^19.2.0",
+    "react-datepicker": "^8.9.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
